# rmdigest

./: Cargo.toml  Makefile  README.md  flake.nix
docs/sample-output/: README.md
examples/: digest_sample.rs  full_sample.rs  inspect.rs
src/: annotate.rs  config.rs  deploy.rs  digest_doc.rs  extract.rs  generate.rs  ingest.rs  ink.rs  lib.rs  linked_doc.rs  main.rs  state.rs  textlayer.rs  theme.rs
src/render/: mod.rs  world.rs
tests/: visual.rs
tests/fixtures/: rmtest-glyph.rmdoc  stamped-labels.rmdoc
