[package]
name = "rmdigest"
version = "0.1.0"
edition = "2021"
description = "Annotation digests for reMarkable PDFs"

[lib]
name = "rmdigest"
path = "src/lib.rs"

[[bin]]
name = "rmdigest"
path = "src/main.rs"

[dependencies]
rmfiles = { path = "../rmfiles" }
typst = "0.14"
typst-pdf = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
comemo = "0.5"
lopdf = "0.36"
tiny-skia = "0.11"
image = "0.25"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
